# License-Plate-Recognition

./: ReadMe.md  pyproject.toml  run.ipynb
