[tool.poetry]
name = "license-plate-recognition"
version = "0.1.0"
description = ""
authors = ["DilanJT <dicmandilan@gmail.com>"]
readme = "README.md"
packages = [{include = "license_plate_recognition"}]

[tool.poetry.dependencies]
python = "^3.10"
opencv-python-headless = "^4.8.0.74"
pytesseract = "^0.3.10"
pillow = "^10.0.0"
jupyterlab = "^4.0.3"
matplotlib = "^3.7.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
